fix: fixed some weird spacing

--- a/src/renderer/global.scss
+++ b/src/renderer/global.scss
@@ -3,12 +3,15 @@
 @tailwind utilities;
 html {
     height: 100%;
+    width: 100%;
 }
 
 body {
     height: 100%;
+    width: 100%;
 }
 
 #app {
     height: 100%;
+    width: 100%;
 }
